# mio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: MioAmalgamate.cmake  mio-config.cmake.in
include/mio/: mmap.hpp  page.hpp  shared_mmap.hpp
include/mio/detail/: mmap.ipp  string_util.hpp
single_include/mio/: mio.hpp
test/: CMakeLists.txt  test.cpp  test_single_header.cpp
